--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/icons/doctor.ico" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icons/doctor.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dr. Julio Salvador</title>
   </head>
